Adds 'summer 2014' to JD titel

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <span class="label"><label for="field_45858046">Vacancy</label><em>*</em></span>
   <span class="hint">Carefully select the vacancy you are applying for</span>
   <select class="app required" id="field_45858046" name="field_45858046" style="width:100%;" data-notrequired="required">
-    <option value="165774682" selected>International development &amp;  business internship</option>
+    <option value="165774682" selected>International development &amp;  business internship (Summer 2014)</option>
   </select>
 </div>
 
