Adds kenya 2015 internship

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <span class="label"><label for="field_45858046">Vacancy</label><em>*</em></span>
   <span class="hint">Carefully select the vacancy you are applying for</span>
   <select class="app required" id="field_45858046" name="field_45858046" style="width:100%;" data-notrequired="required">
-    <option value="165774682" selected>International development &amp;  business internship (Summer 2014)</option>
+    <option value="232417069" selected>Kenya International development &amp;  business internship (2015)</option>
+    <!-- <option value="165774682" selected>International development &amp;  business internship (Summer 2014)</option> -->
   </select>
 </div>
 
@@ -504,16 +505,16 @@
 <div class="field">
   <span class="label"><label for="Attachments">Attachments (don't rely on information in attached files)</label></span>
   <span class="hint">Here you may attach your CV and any other supporting files if you wish. <br /><strong><em>Important note:</em></strong> You should include any information that you wish to form part of your application in the form above as we will base our initial decisions on this form alone. Don't leave any details that you'd want us to see on only your CV. Consider your CV and other supporting documents as secondary; this online form is your primary application.</span>
-  <input class="file" id="attachment_0" name="attachment_0" type="file">
-  <input class="file hidden" id="attachment_1" name="attachment_1" type="file">
-  <input class="file hidden" id="attachment_2" name="attachment_2" type="file">
-  <input class="file hidden" id="attachment_3" name="attachment_3" type="file">
-  <input class="file hidden" id="attachment_4" name="attachment_4" type="file">
-  <input class="file hidden" id="attachment_5" name="attachment_5" type="file">
-  <input class="file hidden" id="attachment_6" name="attachment_6" type="file">
-  <input class="file hidden" id="attachment_7" name="attachment_7" type="file">
-  <input class="file hidden" id="attachment_8" name="attachment_8" type="file">
-  <input class="file hidden" id="attachment_9" name="attachment_9" type="file">
+  <input class="file" id="attachment_0" name="attachment_0" type="file"> <br/>
+  <input class="file hidden" id="attachment_1" name="attachment_1" type="file"> <br/>
+  <input class="file hidden" id="attachment_2" name="attachment_2" type="file"> <br/>
+  <input class="file hidden" id="attachment_3" name="attachment_3" type="file"> <br/>
+  <input class="file hidden" id="attachment_4" name="attachment_4" type="file"> <br/>
+  <input class="file hidden" id="attachment_5" name="attachment_5" type="file"> <br/>
+  <input class="file hidden" id="attachment_6" name="attachment_6" type="file"> <br/>
+  <input class="file hidden" id="attachment_7" name="attachment_7" type="file"> <br/>
+  <input class="file hidden" id="attachment_8" name="attachment_8" type="file"> <br/>
+  <input class="file hidden" id="attachment_9" name="attachment_9" type="file"> <br/>
   <button class="add-file-field" type="button">Add another file</button>
 </div>
 
@@ -524,7 +525,7 @@
 </form>
 
 <footer>
-  <p>Having trouble with this form? Contact us on <a href="mailto:ops@tbnetwork.org">ops@tbnetwork.org</a> or <a href="tel:+447595290788">+44 7595 290 788</a> and let us know what's going wrong.</p>
+  <p>Having trouble with this form? Contact us on <a href="mailto:ops@tbnetwork.org">ops@tbnetwork.org</a> or <a href="tel:+448454676384">+44 8454 676 384</a> and let us know what's going wrong.</p>
 </footer>
 
 </div><!-- .page -->
