Makes attachment inputs stack properly

--- a/index.html
+++ b/index.html
@@ -505,16 +505,16 @@
 <div class="field">
   <span class="label"><label for="Attachments">Attachments (don't rely on information in attached files)</label></span>
   <span class="hint">Here you may attach your CV and any other supporting files if you wish. <br /><strong><em>Important note:</em></strong> You should include any information that you wish to form part of your application in the form above as we will base our initial decisions on this form alone. Don't leave any details that you'd want us to see on only your CV. Consider your CV and other supporting documents as secondary; this online form is your primary application.</span>
-  <input class="file" id="attachment_0" name="attachment_0" type="file"> <br/>
-  <input class="file hidden" id="attachment_1" name="attachment_1" type="file"> <br/>
-  <input class="file hidden" id="attachment_2" name="attachment_2" type="file"> <br/>
-  <input class="file hidden" id="attachment_3" name="attachment_3" type="file"> <br/>
-  <input class="file hidden" id="attachment_4" name="attachment_4" type="file"> <br/>
-  <input class="file hidden" id="attachment_5" name="attachment_5" type="file"> <br/>
-  <input class="file hidden" id="attachment_6" name="attachment_6" type="file"> <br/>
-  <input class="file hidden" id="attachment_7" name="attachment_7" type="file"> <br/>
-  <input class="file hidden" id="attachment_8" name="attachment_8" type="file"> <br/>
-  <input class="file hidden" id="attachment_9" name="attachment_9" type="file"> <br/>
+  <input class="file" id="attachment_0" name="attachment_0" type="file">
+  <input class="file hidden" id="attachment_1" name="attachment_1" type="file">
+  <input class="file hidden" id="attachment_2" name="attachment_2" type="file">
+  <input class="file hidden" id="attachment_3" name="attachment_3" type="file">
+  <input class="file hidden" id="attachment_4" name="attachment_4" type="file">
+  <input class="file hidden" id="attachment_5" name="attachment_5" type="file">
+  <input class="file hidden" id="attachment_6" name="attachment_6" type="file">
+  <input class="file hidden" id="attachment_7" name="attachment_7" type="file">
+  <input class="file hidden" id="attachment_8" name="attachment_8" type="file">
+  <input class="file hidden" id="attachment_9" name="attachment_9" type="file">
   <button class="add-file-field" type="button">Add another file</button>
 </div>
 
