Fixes photo field

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <div class="field" data-description="Upload a photo of yourself">
   <span class="label"><label for="field_45859612">Photo of you</label></span>
   <span class="hint">Only jpg/png/gif/bmp file types are supported</span>
-  <input class="file imageFile" id="field_45859612_0" name="fields[your-photo]" type="file">
+  <input class="file imageFile" id="field_45859612_0" name="fields[your-photo][]" type="file">
 </div>
 
 <div class="field" data-description="">
