--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   <select class="app required" id="field_45858046" name="fields[vacancy]" style="width:100%;" data-parsley-validate>
     <option value="" selected>-- select vacancy --</option>
     <option value="492321199">TBN Kenya office director</option>
-    <option value="492321199">TBN Kenya office director</option>
-
+    <option value="492342635">Consultant - Programme Development</option>
     <!-- <option value="373127102" selected>Executive Assistant/PA to dynamic successful British Entrepreneur (2016)</option> -->
     <!-- <option value="232417069" selected>Kenya International development &amp;  business internship (2015)</option> -->
     <!-- <option value="165774682" selected>International development &amp;  business internship (Summer 2014)</option> -->
