--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TBN Job Application</title>
-	<link rel="stylesheet" href="build/css/styles.css">
+	<link rel="stylesheet" href="build/css/styles.css?ver=f3ba3c0eab1771bd847a6a8fcba93d2b">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="csrf-param" content="authenticity_token" />
