Adds JS cache busting

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
 
 </div><!-- .page -->
 
-<script src="build/js/main.js"></script>
+<script src="build/js/main.js?ver=9389633574e9b1bc377ce80d3315a7e7"></script>
 
 <script type="text/javascript">
 
