Makes edits requested in Reuben email on 2016-10-07
_"Frontend - small edits needed
- Job description should be 'Kenya Director' - remove the word 'office'
- No need for a photo - any site where i've been asked for this it drives me crazy as will only accept certain sizes and formats
- Contact us for form problems - I think we should only include Sheillah's address & not phone number.
- Is there a way to add auto-fill from Linkedin profile?

Backend
- 2 questions appear which aren't on the front end - be great to remove them. 'Do you have pending job applications/ offers?' 'Can you continue past the summer?'"_

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <span class="hint">Carefully select the vacancy you are applying for</span>
   <select class="app required" id="field_45858046" name="fields[vacancy]" style="width:100%;" data-parsley-validate>
     <option value="" selected>-- select vacancy --</option>
-    <option value="492321199">TBN Kenya office director</option>
+    <option value="492321199">Kenya director</option>
     <option value="492342635">Consultant - Programme Development</option>
     <!-- <option value="373127102" selected>Executive Assistant/PA to dynamic successful British Entrepreneur (2016)</option> -->
     <!-- <option value="232417069" selected>Kenya International development &amp;  business internship (2015)</option> -->
@@ -129,12 +129,6 @@
 <div class="field" data-description="">
   <span class="label"><label for="field_45860315">Skype username</label></span>
   <input class="text" id="field_45860315" name="fields[skype-username]" type="text">
-</div>
-
-<div class="field" data-description="Upload a photo of yourself">
-  <span class="label"><label for="field_45859612">Photo of you</label></span>
-  <span class="hint">Only jpg/png/gif/bmp file types are supported</span>
-  <input class="file imageFile" id="field_45859612_0" name="fields[your-photo][]" type="file">
 </div>
 
 <div class="field" data-description="">
@@ -765,7 +759,7 @@
 </form>
 
 <footer>
-  <p>Having trouble with this form? Contact us on <a href="mailto:sheillah.nyatome@tbnetwork.org">sheillah.nyatome@tbnetwork.org</a> or <a href="tel:+448454676384">+44 8454 676 384</a> and let us know what's going wrong.</p>
+  <p>Having trouble with this form? Contact us on <a href="mailto:sheillah.nyatome@tbnetwork.org">sheillah.nyatome@tbnetwork.org</a> and let us know what's going wrong.</p>
 </footer>
 
 </div><!-- .page -->
