--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
   <span class="label"><label for="field_45858046">Vacancy</label><em>*</em></span>
   <span class="hint">Carefully select the vacancy you are applying for</span>
   <select class="app required" id="field_45858046" name="fields[vacancy]" style="width:100%;" data-parsley-validate>
-    <option value="" selected>-- select vacancy --</option>
-    <option value="492321199">Kenya director</option>
-    <option value="492342635">Consultant - Programme Development</option>
+    <!-- <option value="" selected>-- select vacancy --</option> -->
+    <option value="665736432" selected>Personal Assistant to Chairman (Karen, Kenya)</option>
+    <!-- <option value="492321199">Kenya director</option> -->
+    <!-- <option value="492342635">Consultant - Programme Development</option> -->
     <!-- <option value="373127102" selected>Executive Assistant/PA to dynamic successful British Entrepreneur (2016)</option> -->
     <!-- <option value="232417069" selected>Kenya International development &amp;  business internship (2015)</option> -->
     <!-- <option value="165774682" selected>International development &amp;  business internship (Summer 2014)</option> -->
