Tweaks job name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <span class="hint">Carefully select the vacancy you are applying for</span>
   <select class="app required" id="field_45858046" name="fields[vacancy]" style="width:100%;" data-parsley-validate>
     <!-- <option value="" selected>-- select vacancy --</option> -->
-    <option value="665736432" selected>Personal Assistant to Chairman (Karen, Kenya)</option>
+    <option value="665736432" selected>Executive Assistant to Chairman (Kenya)</option>
     <!-- <option value="492321199">Kenya director</option> -->
     <!-- <option value="492342635">Consultant - Programme Development</option> -->
     <!-- <option value="373127102" selected>Executive Assistant/PA to dynamic successful British Entrepreneur (2016)</option> -->
