Adds link back to jobs page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <div class="form-description">
 	<p>Please fill out the sections below using the instructions below each field. Note that although you can attach your CV along with this application you should include any information you wish to form part of your application in this form as we will base our initial decisions on this form alone. Don't leave any details that you'd want us to see on only your CV.</p>
+  <p>You can find full details of available TBN positions at <a href="https://www.tbnetwork.org/jobs">www.tbnetwork.org/jobs</a></p>
 </div>
 
 <div class="field" data-description="Which job are you applying for?">
