updates email since Sheilla Nyatome left

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 </form>
 
 <footer>
-  <p>Having trouble with this form? Contact us on <a href="mailto:sheillah.nyatome@tbnetwork.org">sheillah.nyatome@tbnetwork.org</a> and let us know what's going wrong.</p>
+  <p>Having trouble with this form? Contact us on <a href="mailto:adminkenya@tbnetwork.org">adminkenya@tbnetwork.org</a> and let us know what's going wrong.</p>
 </footer>
 
 </div><!-- .page -->
